--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ select {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 500;
     justify-self: center;
+    font-size: 25px;
 }
 
 .head-container {
