--- a/style.css
+++ b/style.css
@@ -34,6 +34,8 @@ select {
     font-weight: 500;
     justify-self: center;
     font-size: 25px;
+    width: 50px;
+    height: 35px;
 }
 
 .head-container {
